--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "name": "@moofy-org-ws/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "test": "yarn && npx nx run-many -t test",
+    "build:only": "yarn && npx nx  build moofy-admin",
+    "format": "npx nx format --base=main --head=HEAD",
+    "build": " yarn && npx nx build moofy-admin && npx nx run-many -t test",
+    "s": "yarn && npx nx lint moofy-admin && npx nx build moofy-admin && npx nx run-many -t test && npx nx serve moofy-admin",
+    "r": "yarn && npx nx serve moofy-admin"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~18.2.0",
@@ -17,6 +24,7 @@
     "@angular/ssr": "~18.2.0",
     "express": "~4.18.2",
     "rxjs": "~7.8.0",
+    "yarn": "^1.22.22",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
@@ -58,5 +66,6 @@
     "tslib": "^2.3.0",
     "typescript": "~5.5.2",
     "typescript-eslint": "^8.0.0"
-  }
+  },
+  "packageManager": "yarn@4.5.0"
 }
