--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~18.2.0",
     "@angular/ssr": "~18.2.0",
     "express": "~4.18.2",
+    "firebase-tools": "^13.25.0",
     "rxjs": "~7.8.0",
     "yarn": "^1.22.22",
     "zone.js": "~0.14.3"
