feat: shared lib

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@moofy/app": ["libs/moofy-admin/frontend/app/src/index.ts"]
+      "@moofy/app": ["libs/moofy-admin/frontend/app/src/index.ts"],
+      "@moofy/shared": ["libs/moofy-admin/frontend/shared/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
