--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~18.2.0",
+    "@angular/cdk": "~19.0.0",
     "@angular/common": "~18.2.0",
     "@angular/compiler": "~18.2.0",
     "@angular/core": "~18.2.0",
     "@angular/forms": "~18.2.0",
+    "@angular/material": "~19.0.0",
     "@angular/platform-browser": "~18.2.0",
     "@angular/platform-browser-dynamic": "~18.2.0",
     "@angular/platform-server": "~18.2.0",
     "@angular/router": "~18.2.0",
     "@angular/ssr": "~18.2.0",
+    "@ngrx/component": "^18.1.1",
     "express": "~4.18.2",
     "firebase-tools": "^13.25.0",
     "rxjs": "~7.8.0",
@@ -35,6 +38,7 @@
     "@angular/cli": "~18.2.0",
     "@angular/compiler-cli": "~18.2.0",
     "@angular/language-service": "~18.2.0",
+    "@angular/material": "^19.0.0",
     "@eslint/js": "^9.8.0",
     "@nx/angular": "20.1.2",
     "@nx/cypress": "20.1.2",
