--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,7 @@
     "paths": {
       "@moofy/app": ["libs/moofy-admin/frontend/app/src/index.ts"],
       "@moofy/login": ["libs/moofy-admin/frontend/login/src/index.ts"],
-      "@moofy/shared": ["libs/moofy-admin/frontend/shared/src/index.ts"]
+      "@moofy/shared": ["libs/moofy-admin/frontend/shared/src/index.ts"],
     }
   },
   "exclude": ["node_modules", "tmp"]
