--- a/apps/moofy-admin/project.json
+++ b/apps/moofy-admin/project.json
@@ -8,17 +8,12 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:application",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
-        
         "outputPath": "dist/apps/moofy-admin",
         "index": "apps/moofy-admin/src/index.html",
         "browser": "apps/moofy-admin/src/main.ts",
-        "polyfills": [
-          "zone.js"
-        ],
+        "polyfills": ["zone.js"],
         "tsConfig": "apps/moofy-admin/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
@@ -27,12 +22,13 @@
             "input": "apps/moofy-admin/public"
           }
         ],
-        "stylePreprocessorOptions": {
-          "includePaths": ["libs/moofy-admin/frontend/shared/src/lib/assets/styles/"]
-        },
         "styles": [
-          "@angular/material/prebuilt-themes/magenta-violet.css",
-          "apps/moofy-admin/src/styles.scss"
+          "apps/moofy-admin/src/styles.scss",
+          {
+            "bundleName": "dark-theme",
+            "inject": false,
+            "input": "apps/moofy-admin/src/styles/themes/dark.scss"
+          }
         ],
         "scripts": [],
         "server": "apps/moofy-admin/src/main.server.ts",
@@ -88,9 +84,7 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/{projectRoot}"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "apps/moofy-admin/jest.config.ts"
       }
