--- a/apps/moofy-admin/project.json
+++ b/apps/moofy-admin/project.json
@@ -8,12 +8,17 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:application",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
+        
         "outputPath": "dist/apps/moofy-admin",
         "index": "apps/moofy-admin/src/index.html",
         "browser": "apps/moofy-admin/src/main.ts",
-        "polyfills": ["zone.js"],
+        "polyfills": [
+          "zone.js"
+        ],
         "tsConfig": "apps/moofy-admin/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
@@ -22,12 +27,15 @@
             "input": "apps/moofy-admin/public"
           }
         ],
+        "stylePreprocessorOptions": {
+          "includePaths": ["libs/moofy-admin/frontend/shared/src/lib/assets"]
+        },
         "styles": [
           "apps/moofy-admin/src/styles.scss",
           {
             "bundleName": "dark-theme",
             "inject": false,
-            "input": "apps/moofy-admin/src/styles/themes/dark.scss"
+            "input": "libs/moofy-admin/frontend/shared/src/lib/assets/styles/themes/dark.scss"
           }
         ],
         "scripts": [],
@@ -84,7 +92,9 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "apps/moofy-admin/jest.config.ts"
       }
