--- a/apps/moofy-admin/project.json
+++ b/apps/moofy-admin/project.json
@@ -25,6 +25,11 @@
           {
             "glob": "**/*",
             "input": "apps/moofy-admin/public"
+          },
+          {
+            "glob": "**/*",
+            "input": "libs/moofy-admin/frontend/shared/src/lib/assets",
+            "output": "/assets/"
           }
         ],
         "stylePreprocessorOptions": {
@@ -51,12 +56,12 @@
             {
               "type": "initial",
               "maximumWarning": "500kb",
-              "maximumError": "1mb"
+              "maximumError": "2mb"
             },
             {
               "type": "anyComponentStyle",
               "maximumWarning": "2kb",
-              "maximumError": "4kb"
+              "maximumError": "45kb"
             }
           ],
           "outputHashing": "all"
